packages/bun-usockets/src/libusockets.h

/* Library types publicly available */
struct us_socket_t;
struct us_connecting_socket_t;
struct us_socket_group_t;
/* Creates a (heavy-weight) UDP socket with a user space ring buffer. Again, this one is heavy weight and
 * shoud be reused. One entire QUIC server can be implemented using only one single UDP socket so weight
 * is not a concern as is the case for TCP sockets which are 1-to-1 with TCP connections. */
//struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*read_cb)(struct us_udp_socket_t *), unsigned short port);

//struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, struct us_udp_packet_buffer_t *, int), void (*drain_cb)(struct us_udp_socket_t *), char *host, unsigned short port);

struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, void *, int), void (*drain_cb)(struct us_udp_socket_t *), void (*close_cb)(struct us_udp_socket_t *), void (*recv_error_cb)(struct us_udp_socket_t *, int, int), const char *host, unsigned short port, int flags, int *err, void *user);
/* Adopts an already created (and usually already bound) UDP socket descriptor
 * instead of creating a new one. The fd is made non-blocking and the standard
 * receive-path options are applied. Returns null with *err set on failure. */
struct us_udp_socket_t *us_create_udp_socket_from_fd(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, void *, int), void (*drain_cb)(struct us_udp_socket_t *), void (*close_cb)(struct us_udp_socket_t *), void (*recv_error_cb)(struct us_udp_socket_t *, int, int), LIBUS_SOCKET_DESCRIPTOR fd, int shared, int *err, void *user);
/* Mutable list-head + sweep state. Zero-initialise then us_socket_group_init().
 * `ext` is the owner pointer recovered by handlers (server*, app*, vm*). */
struct us_socket_group_t {
    struct us_loop_t *loop;
    const struct us_socket_vtable_t *vtable;
    void *ext;
    struct us_socket_t *head_sockets;
    struct us_connecting_socket_t *head_connecting_sockets;
    struct us_listen_socket_t *head_listen_sockets;
    struct us_socket_t *iterator;
    struct us_socket_group_t *prev, *next;
    uint32_t global_tick;
    /* Sockets currently parked in loop->data.low_prio_head with s->group == this.
     * They are NOT in head_sockets while queued, so close_all/deinit must
     * account for them separately. */
    uint16_t low_prio_count;
    unsigned char timestamp;
    unsigned char long_timestamp;
    unsigned char linked;
};
void us_connecting_socket_close(struct us_connecting_socket_t *c) nonnull_fn_decl;
void us_connecting_socket_timeout(struct us_connecting_socket_t *c, unsigned int seconds) nonnull_fn_decl;
void us_connecting_socket_long_timeout(struct us_connecting_socket_t *c, unsigned int minutes) nonnull_fn_decl;
void us_connecting_socket_shutdown(struct us_connecting_socket_t *c) nonnull_fn_decl;
void us_connecting_socket_shutdown_read(struct us_connecting_socket_t *c) nonnull_fn_decl;
int us_connecting_socket_is_shut_down(struct us_connecting_socket_t *c) nonnull_fn_decl;
int us_connecting_socket_is_closed(struct us_connecting_socket_t *c) nonnull_fn_decl;
int us_connecting_socket_get_error(struct us_connecting_socket_t *c) nonnull_fn_decl;
/* Raw getaddrinfo(3) return code when the name lookup itself failed; 0 for a
 * connect failure past name resolution. Nonzero means us_connecting_socket_get_error
 * returns the same getaddrinfo code, not an errno (the two namespaces overlap). */
int us_connecting_socket_get_dns_error(struct us_connecting_socket_t *c) nonnull_fn_decl;
void *us_connecting_socket_get_native_handle(struct us_connecting_socket_t *c) nonnull_fn_decl;
struct us_socket_group_t *us_connecting_socket_group(struct us_connecting_socket_t *c) nonnull_fn_decl;
unsigned char us_connecting_socket_kind(struct us_connecting_socket_t *c) nonnull_fn_decl;
/* Public interfaces for loops */

/* Returns a new event loop with user data extension */
struct us_loop_t *us_create_loop(void *hint, void (*wakeup_cb)(us_loop_r loop),
    void (*pre_cb)(us_loop_r loop), void (*post_cb)(us_loop_r loop), unsigned int ext_size);
void *us_connecting_socket_ext(struct us_connecting_socket_t *c) nonnull_fn_decl;